[package]
name = "simple-discover"
version = "1.0.0"
edition = "2024"

description = "A lightweight service discovery library for LAN using UDP multicast with custom data support"
repository = "https://github.com/mengyou1024/simple-discover"
license = "MIT"
keywords = ["service-discovery", "multicast", "udp", "lan", "networking"]
categories = ["network-programming", "asynchronous"]
authors = ["mengyou1024 <mengyou1024@126.com>"]

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[dependencies]
tonic = { version = "0.14.5", features = ["zstd"] }
log = "0.4.29"
tokio = { version = "1.51.1", features = ["full"] }
tokio-util = "0.7.18"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
crc32fast = "1.5.0"

[dev-dependencies]
env_logger = { version = "0.11.10", features = ["auto-color"] }
